@@ -370,7 +370,7 @@ pattern is not anchored.
 .SH "NEWLINE CONVENTIONS"
 .rs
 .sp
-These are recognized only at the very start of the pattern or after a 
+These are recognized only at the very start of the pattern or after a
 (*BSR_...) option.
 .sp
   (*CR)
@@ -383,7 +383,7 @@ These are recognized only at the very start of the pattern or after a
 .SH "WHAT \eR MATCHES"
 .rs
 .sp
-These are recognized only at the very start of the pattern or after a 
+These are recognized only at the very start of the pattern or after a
 (*...) option that sets the newline convention.
 .sp
   (*BSR_ANYCRLF)
